test/expected/declare_o_exclam_2i.out
declare ! as operator (int, int) returning bool
                       ^
24: error: operator "!" can have at most 1 parameter
